--- a/10-PDF_R.Rmd
+++ b/10-PDF_R.Rmd
@@ -1,22 +1,20 @@
 # PDF Form and R Scraping
 
-## R Scrape PDF Approach Overview  {#PDFtop} 
+## Overview  {#PDFtop} 
 
-PDF forms have been used by several IEP survey teams as a way to streamline data collection and provide data entry QC while keeping the form development time and expense to a minimum [See IEP E-device Survey](#appx_1).  
-
-Fillable PDF forms can be developed using a number of programs, including Acrobat, Acrobat Reader (free) or Foxit editor (free version available). Other free software or web-based PDF form building and fillable conversion tools are available (e.g., Canva/DocFly or UPDF).  
+PDF forms have been used by several IEP survey teams as a way to streamline data collection and provide data entry QC while keeping the form development time and expense to a minimum [See IEP E-device Survey responses](#appx_1).  
 
 R has been proposed as a tool for programmatically extracting the filled-in PDF form. The following is a presentation developed by Trinh Nguyen that examines the feasibility of R-scraping methods for PDF forms. Scraping is the process of programmatically grabbing information from a webpage or document by analyzing the underlying code of the document.
 
-The full code for Trinh's evaluation is included in Appendix 2: [PDF R Scraping Demonstration](#appx_2)
 
 
 ## Create a fillable PDF form
 
+Fillable PDF forms can be developed using a number of programs, including Acrobat, Acrobat Reader (free) or Foxit editor (free version available). Other free software or web-based PDF form building and fillable conversion tools are available (e.g., Canva/DocFly or UPDF).  
+
 [How to create fillable PDF forms with Adobe Adrobat](https://helpx.adobe.com/acrobat/using/creating-distributing-pdf-forms.html#create_forms_using_acrobat)
 
 [How to create fillable PDF forms with Foxit Editor](https://www.foxit.com/blog/how-to-create-fillable-pdf-forms/?psafe_param=1&utm_source=googleads&utm_medium=PMAX&cq_cmp=19179766755&utm_campaign=FOXIT_GA_NAM_EN_PMAX_LEADS_SALESFORCE_PDF%20EDITOR&gclid=EAIaIQobChMIkore1cbcgAMVgAOtBh3QLQ_WEAAYASAAEgLmOfD_BwE)
-
 
 
 ```{r, echo=FALSE, fig.cap="Potential field types available to insert as fillable forms in Foxit.", out.width = '90%'}
@@ -24,16 +22,30 @@ knitr::include_graphics("images/PDF_Rscrape/FoxitEditor.jpg", error = FALSE)
 ```
 
 
+## Analysis by Trinh Nguyen 
+
+The following is an evaluation of R-based methods for data extraction from PDF Forms prepared by Trinh Nguyen (IEP/CDFW) and presented to the DUWG subgroup in August 2023.
+
+NOTE: The tabulizer library and code chunks are marked out in this bookdown document in order to simplify the Bookdown render. The full downloadable codes used for Trinh's evaluation are included in Appendix 2: [PDF R Scraping Demonstration](#appx_2)
 
 
-## Excerpts from evalutaion by Trinh Nguyen:
+<br>
+
+```{r, warning=FALSE, message=FALSE}
+library(kableExtra)
+library(dplyr)
+#library(tabulizer)
+library(tidyr)
+library(stringr)
+pdfRead <-    here("images/PDF_Rscrape/pdfRead")
+```
 
 Purpose: There are several PDF scraping packages in R. I will focus on two:
 
 1.  `pdftools`
 2.  `tabulizer`
 
-###  Pros and Cons
+## Pros and Cons
 
 -   The main reason to consider this approach: cost. It is free.
 
@@ -45,7 +57,7 @@ Purpose: There are several PDF scraping packages in R. I will focus on two:
     4.  `tabulizer` can be difficult to install if you run into Java restrictions
 :::
 
-### Outline
+## Outline
 
 1.  Primer to 'pdftools'
 2.  Primer to 'tabulizer'
@@ -53,67 +65,163 @@ Purpose: There are several PDF scraping packages in R. I will focus on two:
 4.  Case study: DGS Pay Period Tables
 5.  Conclusion
 
-Primer to 'pdftools'
+## Primer to 'pdftools'
 
 -   Primarily used to extract **ONLY** text-based data from a pdf
 -   Will read back all text as a singular string (ignoring structure)
 
+```{r, echo=TRUE, eval=FALSE}
+pdftools::pdf_text("https://water.ca.gov/-/media/DWR-Website/Web-Pages/Programs/State-Water-Project/Operations-And-Maintenance/Files/Operations-Control-Office/Delta-Status-And-Operations/Delta-Operations-Daily-Summary.pdf")
+```
 
-Primer to 'tabulizer'
+## Primer to 'tabulizer'
 
 -   Used to extract **ONLY** text-based data from a pdf
 -   Can extract formatted tabular data as tables
 -   However, tables must be formatted as tables
 
-Case study: Bay Study Datasheet
+## First Case Study: Bay Study
 
-```{r , echo=FALSE, fig.cap="Bay Study datasheet: NOT Tabulated", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/bayStudyExample_1.png", error = FALSE)
+A PDF form was generated to match the current Bay Study datasheet
+
+```{r , echo=FALSE, out.width = '90%'}
+knitr::include_graphics(file.path(pdfRead,"bayStudyExample_1.png"), error = FALSE)
 ```
 
-Workflow: Bay Study
+### General Workflow
 
 1. If the data is tabular, use `extract_table()` from `tabulizer`
 2. Non-tabular data will require more creative approaches
 
+### Extracting tabular data
 
-```{r , echo=FALSE, fig.cap="Attempt to extract Bay Study datasheet using tabulizer function, extract_tables", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/extract_non-formated.JPG", error = FALSE)
+Note: Output of these extract_table functions will not appear in the bookdown document because the tabulizer library is marked out. See [Appendix 2](#appx_2) for full R code and example PDF files.  
+
+```{r, echo=TRUE, eval=FALSE}
+extract_tables(file.path(pdfRead,"Bay Study field sheet front_fill2_data.pdf"))
 ```
 
 
-```{r , echo=FALSE, fig.cap="Attempt to extract Bay Study datasheet by finding specific data locations for reference.", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/extract_non-formated2.JPG", error = FALSE)
+`extract_tables()` has two algorithms to try and scrape tables. Can try both
+
+```{r, echo=TRUE, eval=FALSE} 
+extract_tables(file.path(pdfRead, "bayStudyExample.pdf"), method = "lattice")
+extract_tables(file.path(pdfRead, "bayStudyExample.pdf"), method = "stream")
 ```
 
-```{r , echo=FALSE, fig.cap="Bay Study datasheet with data location highlighted.", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/extract_non-formated3.JPG", error = FALSE)
-```
+<br/><br/>
 
-```{r , echo=FALSE, fig.cap="Bay Study datasheet coordinates from locate_areas function.", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/extract_non-formated4.JPG", error = FALSE)
-```
-
-```{r , echo=FALSE, fig.cap="Extracted data from one location of the Bay Study datasheet", out.width = '90%'}
-knitr::include_graphics("images/PDF_Rscrape/extract_non-formated5.JPG", error = FALSE)
-```
-In Contrast: Tabular Data
+::: {.fragment}
+Still does not work for the example Bay Study form!
+:::
 
 
-```{r , echo=FALSE, fig.cap="Tabulated Pay Period tables.", out.width = '90%'}
-knitr::include_graphics("docs/images/PDF_Rscrape/PayPeriodsDGS_1.png", error = FALSE)
+One final approach is to specify the specific location of the data on the pdf.
+
+```{r, echo=TRUE, eval=FALSE}
+locate_areas(file.path(pdfRead,"Bay Study field sheet front_fill2_data.pdf"))
 ```
 
 
-<!-- ```{r , echo=FALSE, fig.cap="Extracting Tabulated Data", out.width = '90%'} -->
-<!-- knitr::include_graphics("images/PDF_Rscrape/extract_tabular.JPG", error = FALSE) -->
-<!-- ``` -->
+```{r , echo=FALSE, out.width = '90%'}
+knitr::include_graphics(file.path(pdfRead,"locateCoordinates.png"), error = FALSE)
+```
 
-<!-- ```{r , echo=FALSE, fig.cap="Extracted Tabulated Data", out.width = '90%'} -->
-<!-- knitr::include_graphics("images/PDF_Rscrape/extract_tabular2.JPG", error = FALSE) -->
-<!-- ``` -->
 
-### Conclusion 
+Once data table is selected, extract_tables function can be applied successfully:
+
+```{r , echo=FALSE, out.width = '90%'}
+knitr::include_graphics(file.path(pdfRead,"locateCoordinatesResults.png"), error = FALSE)
+```
+
+
+```{r, echo=TRUE, eval=FALSE}
+table <- extract_tables(file.path(pdfRead,"bayStudyExample.pdf"), pages = 1,
+                        area = list(c(176.8358, 35.8913, 393.9738, 601.7659)), 
+                        guess = F, output = "data.frame")
+table
+```
+
+ 
+```{r, echo=TRUE, eval=FALSE}
+#| output-location: slide
+table[[1]] %>% 
+  .[-1, ] %>% 
+  setNames(c("Species", "S", "Plus", "Specimen1", "Specimen2", "Specimen3", 
+             "Specimen4", "Specimen5")) %>% 
+  data.frame() %>% 
+  pivot_longer(c("Specimen1", "Specimen2", "Specimen3", 
+                 "Specimen4", "Specimen5"),
+               # contains("Specimen"), 
+               names_to = "Specimen", values_to = "Length") %>% 
+  mutate(Sex = str_extract(Length, "[:upper:]"),
+         Length = str_extract(Length, "\\d+"),
+         across(c(S, Plus, Length),
+                as.numeric)) %>% 
+  filter(!(is.na(S) & is.na(Plus) & is.na(Length) & is.na(Sex)))
+```
+
+## Second Case Study: DGS Pay Period Tables
+
+`tabulizer` works well *IF* the datasheet is set up correctly.
+
+
+```{r , echo=FALSE, out.width = '90%'}
+knitr::include_graphics(file.path(pdfRead,"PayPeriodsDGS_1.png"), error = FALSE)
+```
+
+
+DGS Pay Period Tables
+
+```{r, echo=TRUE, eval=FALSE}
+#|output-location: slide
+tables <- extract_tables(file.path(pdfRead,"PayPeriodsDGS.pdf"), method = "stream")
+tables
+```
+
+
+
+Easily workable, e.g., pay period information for the current month:
+
+```{r, echo=TRUE, eval=FALSE}
+masterTableLocation <- which(sapply(tables, function(x) x[1, 1] == "Year"))
+# Cleaning up the tables
+# Table 6 is the master table showing which schedule table each year will follow:
+masterTable <- data.frame(year = c(tables[[masterTableLocation]][1, 2:12], 
+                                   tables[[masterTableLocation]][4, 2:12], 
+                                   tables[[masterTableLocation]][7, 2:12]), 
+                          pattern = c(tables[[masterTableLocation]][2, 2:12], 
+                                      tables[[masterTableLocation]][5, 2:12], 
+                                      tables[[masterTableLocation]][8, 2:12])) %>% 
+  mutate(across(everything(), as.numeric)) %>% 
+  filter(!is.na(year))
+
+priorityTable <- lapply(tables[-masterTableLocation], function(x) {
+
+  if (grepl("PATTERN", x[1, 1])) {
+    data.frame(x) %>% 
+      mutate(pattern = gsub("[^0-9]", "", X1[1])) %>% 
+      filter(X2 %in% c(month.name)) %>% 
+      separate(X3, into = c("startDate", "endDate"), sep = " to ") %>% 
+      transmute(pattern, month = X2, startDate, endDate, numberPaydays = X4)
+  } else {
+    data.frame(x) %>% 
+      filter(X1 %in% c(month.name)) %>% 
+      separate(X2, into = c("startDate", "endDate"), sep = " to ") %>% 
+      transmute(month = X1, startDate, endDate, numberPaydays = X3)
+  }
+}) %>% 
+  bind_rows() %>% 
+  fill(pattern, .direction = "down")
+
+priorityTable %>% 
+  filter(pattern == (masterTable %>%
+                       filter(year == format(Sys.time(), "%Y")) %>% 
+                       pull(pattern)),
+         month == month.name[as.numeric(format(Sys.time(), "%m"))])
+```
+
+## Conclusion {.smaller}
 
 - Possible
 - Automate with `tabulizer` and `pdftools`
@@ -132,10 +240,10 @@ However, there are major drawbacks:
 :::
 :::
 
-###  Pros and Cons
+## Pros and Cons
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE}
-library(kableExtra)
+```{r, echo=FALSE, eval=T}
+
 data.frame("Features" = c("Ease of installation", "Ease of use", "Ease of application", "Extract tables", "Extract text", "Automation", "Code Knowledge", "Recommend"),
            "tabulizer" = c("Hard", "Medium", "Hard", "Yes", "Yes", "Yes", "Medium High", "No"),
            "pdftools" = c("Easy", "Easy", "Very Hard", "No", "Yes", "Yes", "Very High", "Very No")) %>%
@@ -145,8 +253,7 @@ data.frame("Features" = c("Ease of installation", "Ease of use", "Ease of applic
 ```
 
 
-
-## R Scrape PDF Approach: Criteria Tables
+## Criteria Tables
 
 ###  Forms Options
 
