--- a/07-Pendragon.Rmd
+++ b/07-Pendragon.Rmd
@@ -1,15 +1,15 @@
 
 # Pendragon
 
-## Pendragon Overview  {#pentop} 
+## Overview  {#pentop} 
 
 Dan Phillips, a Pendragon Forms company representative, presented to the e-device group on Sept. 22, 2022. Dan suggests that Pendragon falls into the middle of the array of e-device software options, between the very simple, quick menu driven and completely customized form, and forms developed from scratch using base coding languages. Pendragon is in the middle because it has a basic structure that must be followed, but it also has significant flexibility with custom scripting options. On the more complex end, Pendragon forms can include sub-forms, scripting, and custom Java scripted rules and calculations. Pendragon, unlike some other competitors, creates and saves the form in a relational database. MySQL is the database server used.
 
 
-## Pendragon: Key Features 
+## Key Features 
 
 
-### Pendragon Form Developing Interface
+### Form Developing Interface
 
 There are two approaches to developing a data entry form:
 
@@ -34,7 +34,7 @@ knitr::include_graphics("images/Pendragon/form_dev4.jpg", error = FALSE)
 
 The core scripting language of Pendragon is simplified version of Java. Pendragon provides many built-in/proprietary "Calls" (functions) that provide common forms options that are often repeated many times within a form. Pendragon also provides an interface for user-developed Calls; Custom calls are a more advanced form-building options, but these can provides further flexibility and application optimization.  
 
-### Pendragon Forms Options
+### Forms Options
 
 - The date time stamp is included no mater what, but form of date-time can be customized.
 - Full range of field types: Radio buttons (drop-down lists); look-up lists (for large list of records)
@@ -61,7 +61,7 @@ For someone who has done some basic scripting, this tool will be quick to pick u
 
 
 
-### Pendragon Form Permissions Management
+### Form Permissions Management
 
 There are three different levels of access to a Pendragon account.  The User-level can only get in from the interface on the device and cannot design or change the data collection form;  The Designer-level can design forms but cannot control users;  The Administrative-level can do both. Completed forms can be assigned to groups and users can be added to have access to these forms.
 
@@ -80,7 +80,7 @@ knitr::include_graphics("images/Pendragon/form_list.jpg", error = FALSE)
 
 
 
-### Pendragon Web Tool Options
+### Web Tool Options
 
 
 - Web tool menu displays can help organize all forms created.
@@ -94,7 +94,7 @@ knitr::include_graphics("images/Pendragon/form_list.jpg", error = FALSE)
 knitr::include_graphics("images/Pendragon/layout_options.jpg", error = FALSE)
 ```
 
-### Pendragon Mobile Options
+### Mobile Options
 
 - The Form display will only show columns that fit on the page so the design choice is important for for different device types.
 - Rules can be assigned to specify which records come off of the device.
@@ -110,7 +110,7 @@ knitr::include_graphics("images/Pendragon/layout_options.jpg", error = FALSE)
 knitr::include_graphics("images/Pendragon/trace.jpg", error = FALSE)
 ```
 
-### Pendragon Data Interface
+### Data Interface
 
 - Custom API connections available
 - NO version control on the cloud service so CANNOT revert to previous states of the database. 
@@ -127,9 +127,9 @@ knitr::include_graphics("images/Pendragon/synch.jpg", error = FALSE)
 
 
 
-## Pendragon: Criteria Tables
+## Criteria Tables
 
-###  Pendragon: Forms Options
+###  Forms Options
 
 
 
