--- a/08-FEED.Rmd
+++ b/08-FEED.Rmd
@@ -1,6 +1,6 @@
 # VIMS/FEED
 
-## VIMS/FEED Overview  {#feetop} 
+## Overview  {#feetop} 
 
 FEED is a small company owned by Chris Bonzek who works in association with Virginia Institute of Marine Science (VIMS), a division of the College of William and Mary. In Virginia, the State does not conduct any research or monitoring of the state aquatic resources; VIMS and other universities conduct all aquatic monitoring.  
 
@@ -26,7 +26,7 @@ Some links for VIMS and FEED:
 - Youtube video featuring FEED: https://www.youtube.com/watch?v=ko-Yv3xk7kA
 
 
-### VIMS/FEED External Device Interface
+### External Device Interface
 
 The VIMS/FEED app is designed to use a Local Area Network in contrast to other app that have an on-line interface or cloud-based data transfer options. Two key advantages of keeping the data collections and storage local: 1. no change in behavior of the tool if the survey loses internet connectivity; and 2. **Ease of connection to peripheral devices such as fish boards, scales, GPS systems via a LAN router.**  
 
@@ -35,7 +35,7 @@ knitr::include_graphics("images/FEED/DirectDeviceConnects.jpg", error = FALSE)
 ```
 
 
-### FEED App/VIMS Form Development
+### Form Development
 
 The FEED App works in conjunction with the VIMS Form software which is a generic form program writtenm in ____ (a .NET programming language).  The FEED 'App' consists of an Access database (\@ref(fig:feedAdb)) and clear text file (\@ref(fig:feedtxt)) which tells .NET software how to interact with database and how the form appears on the screen. 
 
@@ -50,7 +50,7 @@ knitr::include_graphics("images/FEED/FeedAppdb.PNG", error = FALSE)
 ```
 
 
-### FEED App/VIMS Form Appearance
+### Form Appearance
 
 The VIMS/FEED App provides a clear data entry interface with a variety of controls on the allowable values entered, including drop down, radio buttons, calculated values.
 
@@ -62,12 +62,12 @@ knitr::include_graphics("images/FEED/VIMS.PNG", error = FALSE)
 knitr::include_graphics("images/FEED/FeedFeatures.JPG", error = FALSE)
 ```
 
-### VIMS/FEED App Data Output Format
+### Data Output Format
 
 VIMS/FEED is configured to work with and Access database. Survey data collections are stored in Access db as an intermediate location, but data tables will need to be formatted further to establish the final database format (using a processing script: R, Python, SAS, other).  
 
 
-## FEED: Criteria Tables
+## Criteria Tables
 
 ###  Forms Options
 
