--- a/07-Pendragon.Rmd
+++ b/07-Pendragon.Rmd
@@ -129,8 +129,9 @@ knitr::include_graphics("images/Pendragon/synch.jpg", error = FALSE)
 
 ## Criteria Tables
 
-###  Forms Options
+For in-depth definitions of each criteria, see [e-device comparison criteria](#crittop).
 
+###  Forms Options
 
 
 ```{r Peninit, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE }
